<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeclan.example.cardgame.MainActivity">

    <Button
        android:id="@+id/buttonPlayer1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="36dp"
        android:onClick="onPlayer1ButtonClick"
        android:text="@string/button_player1"
        android:textColorLink="@android:color/black"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlayer2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="220dp"
        android:onClick="onPlayer2ButtonClick"
        android:text="@string/button_player2"
        android:textColorLink="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/player2Choice"
        android:layout_width="286dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/player2_choice_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayer2"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/buttonResult"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:onClick="onResultButtonClick"
        android:text="@string/button_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2ThirdCard"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/gameResult"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/game_result_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResult"
        app:layout_constraintVertical_bias="0.428"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="450dp" />

    <ImageView
        android:id="@+id/player1FirstCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/player1SecondCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/player1FirstCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:srcCompat="@android:color/transparent" />

    <TextView
        android:id="@+id/player1Choice"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:text="@string/player1_choice_text"
        tools:layout_editor_absoluteY="92dp"
        tools:layout_editor_absoluteX="62dp" />

    <ImageView
        android:id="@+id/player1ThirdCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/player1SecondCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/player2FirstCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/player2SecondCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/player2FirstCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/player2ThirdCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/player2SecondCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/player1FourthCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/player1ThirdCard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:srcCompat="@android:color/transparent" />

    <ImageView
        android:id="@+id/player2FourthCard"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/player2ThirdCard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        app:srcCompat="@android:color/transparent" />

</android.support.constraint.ConstraintLayout>
